# drf-cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/: dependabot.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bare.sh  test_cookiecutter_generation.py  test_hooks.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.envs/: .postgres
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/apps/api/: api_router.py  urls.py  views.py
{{cookiecutter.project_slug}}/apps/api/endpoints/: __init__.py  v1.py
{{cookiecutter.project_slug}}/apps/api/tests/: test_health.py  test_swagger.py
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile  entrypoint
{{cookiecutter.project_slug}}/compose/production/postgres/maintenance/: backup
{{cookiecutter.project_slug}}/config/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  test.py
{{cookiecutter.project_slug}}/core/auth/: apps.py
{{cookiecutter.project_slug}}/core/auth/models/: user.py
{{cookiecutter.project_slug}}/core/auth/serializers/: __init__.py  user.py
{{cookiecutter.project_slug}}/core/auth/utils/: factories.py
{{cookiecutter.project_slug}}/core/auth/views/: user.py
{{cookiecutter.project_slug}}/core/db/: managers.py  mixins.py  models.py  querysets.py
{{cookiecutter.project_slug}}/core/restframework/: routers.py
{{cookiecutter.project_slug}}/core/tests/: models.py  test_models.py  test_soft_delete.py
{{cookiecutter.project_slug}}/lib/django_loguru/: apps.py  filters.py  setup.py
{{cookiecutter.project_slug}}/libs/django_loguru/: apps.py  setup.py
{{cookiecutter.project_slug}}/libs/logging/: setup.py
